# Raghvi-V2

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  alembic.ini  check_api_keys.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12f10a85d09e_create_creator_profile_table.py  39b25b96c42a_init.py  45baa27d1453_create_memories_table.py  7c2d492c2a4f_add_auth_tables.py  b5faaa39919b_add_unique_constraint_on_conversations_.py  defaf42c39c7_create_conversations_and_messages_tables.py
backend/app/: main.py
backend/app/api/: auth.py  chat.py  creator.py  health.py  memories.py  ready.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  conversation.py  creator.py  memory.py  message.py  refresh_token.py  user.py
backend/app/schemas/: chat.py  creator.py  memory.py
backend/app/security/: jwt.py
backend/app/services/: chat.py  creator_seed.py  creator_story.py
backend/app/services/ai/: adapter.py  chain.py  client.py  errors.py  prompt.py  registry.py
backend/app/services/memory/: encryption.py  extractor.py  service.py  (+1 more)
backend/tests/: conftest.py  test_ai_chain.py  test_ai_client.py  test_ai_providers.py  test_auth.py  test_chat.py  test_chat_service.py  test_chat_with_memories.py  test_creator.py  test_memory_encryption.py  test_memory_engine.py  test_memory_extractor.py  test_memory_retrieval.py  test_memory_service.py
backend/tests/integration/: __init__.py  test_chat_real_llm.py
(+63 files in other folders)
