[project]
name = "raghvi-backend"
version = "0.1.0"
description = "Raghvi v2 backend service (FastAPI)"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "PyJWT>=2.8.0",
    "openai>=1.0.0", 
    "tiktoken>=0.5.0", 
    "google-genai>=0.3.0",
    "google-api-core>=2.11.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"
markers = [
    "integration: Integration tests",
]
